--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
