--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 		</div>
 	</div>
     
-	<div id="c" class="panels">Scrolling-Panel 2
-		
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	<div id="c" class="panels">Scrolling-Panel
+	
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -155,12 +155,14 @@
         </a>
     </div>
 
+	
 	</div>
 	
+	<div id="about" class="panels">
 	
 	
 	
-	<div id="about" class="panels">Scrolling-Panel 2</div>
+	</div>
     <div id="d" class="panels">Scrolling-Panel 3</div>
 </div>
 
