--- a/index.html
+++ b/index.html
@@ -155,6 +155,39 @@
 	
 	</div>
 	
+	<div id="b" class="panels">
+		<div class="skills">
+		<div class="skills-text">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9">
+					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</h1>
+				</div>
+			</div>
+		</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-md-2"><img src="css.png"></div>
+				<div class="col-xs-4 col-md-2"><img src="wordpress.png"></div>
+				<div class="col-xs-4 col-md-2"><img src="html.png"></div>
+				<div class="col-xs-4 col-md-2"><img src="bootstrap.png"></div>
+				<div class="col-xs-4 col-md-2"><img src="jquery.png"></div>
+				<div class="col-xs-4 col-md-2"><img src="javascript.png"></div>
+			</div>
+		</div>
+		<div class="skills-text" id="right">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-offset-3 col-md-9">
+					<h1>...Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+				</div>
+			</div>
+		</div>
+		</div>
+		</div>
+	</div>
+	
 	<div id="about" class="panels">
 	
 	
