--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	
 	</div>
 	
-	<div id="b" class="panels">
+	<div id="e" class="panels">
 		<div class="skills">
 		<div class="skills-text">
 		<div class="container">
