--- a/index.html
+++ b/index.html
@@ -131,12 +131,17 @@
 			</div>
 		</div>
 		</div>
-		<ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home"><img src="css.png"></a></li>
-    <li><a data-toggle="tab" href="#menu1"><img src="css.png"></a></li>
-    <li><a data-toggle="tab" href="#menu2"><img src="css.png"></a></li>
-    <li><a data-toggle="tab" href="#menu3"><img src="css.png"></a></li>
-  </ul>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-4 col-md-2"></div>
+				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img src="css.png"></a></div>
+				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img src="wordpress.png"></a></div>
+				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img src="html.png"></a></div>
+				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img src="bootstrap.png"></a></div>
+				<div class="col-xs-4 col-md-2"></div>
+			</div>
+		</div>
 		<div class="skills-text" >
 		<div class="container">
 			<div class="row">
