--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 		      <h3>Example Site 4</h3>
 		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 		    </div>
-  </div>
+  	</div>
 	
 	</div>
 	
 	<div id="e" class="panels">
-		<div class="skills">
-		<div class="skills-text" id="right">
+		<div class="selector">
+		<div class="selector-text" id="right">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-3 col-md-9">
@@ -142,7 +142,7 @@
 				<div class="col-xs-4 col-md-2"></div>
 			</div>
 		</div>
-		<div class="skills-text" >
+		<div class="selector-text" >
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
