--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-md-2"></div>
-				<div class="col-xs-4 col-md-2 active"><a data-toggle="tab" href="#home"><img id="sel1" src="css.png"></a></div>
-				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="wordpress.png"></a></div>
-				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div>
-				<div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div>
-				<div class="col-xs-4 col-md-2"></div>
+				<ul>
+					<li><div class="col-xs-4 col-md-2"></div></li>
+					<li><div class="col-xs-4 col-md-2 active"><a data-toggle="tab" href="#home"><img id="sel1" src="css.png"></a></div></li>
+					<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="wordpress.png"></a></div></li>
+					<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
+					<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div></li>
+					<li><div class="col-xs-4 col-md-2"></div></li>
+				</ul>
 			</div>
 		</div>
 		<div class="selector-text" >
