--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-md-2"></div>
+				<div class="col-xs-4 col-md-2 examples"></div>
 				<ul style="list-style-type:none">
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="css.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="wordpress.png"></a></div></li>
