--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-md-2 examples"></div>
-				<ul style="list-style-type:none">
+				<div class="col-xs-4 col-md-2"></div>
+				<ul class="examples" style="list-style-type:none">
 				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="css.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="wordpress.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
