--- a/index.html
+++ b/index.html
@@ -101,21 +101,17 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<h3>Example Site 1</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<img src="swmsheader.png"/>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
-		      <h3>Example Site 2</h3>
-		      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		      <img src="perfectcareheader.png"/>
 		    </div>
 		    <div id="menu2" class="tab-pane fade">
-		      <h3>Example Site 3</h3>
-		      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+ 
 		    </div>
 		    <div id="menu3" class="tab-pane fade">
-		      <h3>Example Site 4</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-		    </div>
+		    
+			</div>
   	</div>
 	
 	</div>
@@ -136,8 +132,8 @@
 			<div class="row">
 				<div class="col-xs-4 col-md-2"></div>
 				<ul class="examples" style="list-style-type:none">
-				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="css.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="wordpress.png"></a></div></li>
+				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="swms.png"></a></div></li>
+				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="perfectcare.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div></li>
 				</ul>	
