--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="row">
 				<div class="col-xs-4 col-md-2"></div>
 				<ul class="examples" style="list-style-type:none">
-				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="swms.png"></a></div></li>
+				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="SWMS.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="perfectcare.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div></li>
