--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
-					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</h1>
+					<h1>As a self-taught developer, I've wrapped my head round the following things...</h1>
 				</div>
 			</div>
 		</div>
@@ -89,7 +89,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-3 col-md-9">
-					<h1>...Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+					<h1>...and with them I've been able to make a </h1>
 				</div>
 			</div>
 		</div>
