--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<img src="swmsheader.png"/>
+				<a href="Little Legs.html><img src="swmsheader.png"/></a>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
 		      <img src="perfectcareheader.png"/>
