--- a/Little Legs.html
+++ b/Little Legs.html
@@ -5,7 +5,7 @@
   <head>
     
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="css/little legs.css">
+    <link rel="stylesheet" href="css/Little Legs.css">
 	
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		
