--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<a href="Little Legs.html"><img src="swmsheader.png"/></a>
+				<a href="Little Legs.html"><img src="perfectcareheader.png"/></a>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
-		      <img src="perfectcareheader.png"/>
+		      <img src="swmsheader.png"/>
 		    </div>
 		    <div id="menu2" class="tab-pane fade">
  
@@ -132,8 +132,8 @@
 			<div class="row">
 				<div class="col-xs-4 col-md-2"></div>
 				<ul class="examples" style="list-style-type:none">
-				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="SWMS.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="perfectcare.png"></a></div></li>
+				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
+				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div></li>
 				</ul>	
