--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<a href="Little Legs.html"><img src="perfectcareheader.png"/></a>
+				<img src="perfectcareheader.png"/>
 				 Test - Coming Soon
 				 <div class="container">
 					<div class="row">
@@ -118,20 +118,25 @@
 				</div>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
-		      <img src="swmsheader.png"/>
+		      <a href="Little Legs.html"><img src="swmsheader.png"/></a>
 			  Test - Coming Soon
 			   <div class="container">
 					<div class="row">
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
+							<p><em>"Muhammed.</br> 
+							</br>All round nice guy.</br> 
+							</br>The only person I've ever met who could fix the trickiest of IT problems merely by glancing in it's general direction</br> 
+							</br>Also capable of coming up with some of the most mind numbing quotes I've ever heard.</br>
+							</br>This site is a treasured collection of some of his best..."</em></p>
 						</div>
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
+							<p>My mate Mo. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 						<div class="col-sm-4">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 					</div>
+				</div>iv>
 				</div>
 		    </div>
 		    <div id="menu2" class="tab-pane fade">
