--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 					</div>
-				</div>iv>
+				</div>
 				</div>
 		    </div>
 		    <div id="menu2" class="tab-pane fade">
