--- a/index.html
+++ b/index.html
@@ -101,25 +101,27 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<img src="perfectcareheader.png"/>
-			
+				<a href="Little Legs.html"><img src="perfectcareheader.png"/></a>
+
 				 <div class="container">
 					<div class="row">
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 						<div class="col-sm-4">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
+							<p><em>"The first site I ever completed.</br>
+							</br>A re-design of a Friend's website to help improve his websites ease of use.</br>
+							</br>Taking the key information and branding from the previous site I started again from scratch</br>
+							</br> With the Primary audience being the elderly the site was designed to be as simple as possible whilst also maintaining a professional image"</em></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
-		      <a href="Little Legs.html"><img src="swmsheader.png"/></a>
-			
+		      <img src="swmsheader.png"/>
+
 			   <div class="container">
 					<div class="row">
 						<div class="col-sm-4">
@@ -130,13 +132,12 @@
 							</br>This site is a treasured collection of some of his best..."</em></p>
 						</div>
 						<div class="col-sm-4">
-							<p>My mate Mo. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
+							<p>A welcome opportunity to try my hand at Javascript.</br>
+							<br>Having mainly been toying with flat HTML and CSS sites, the need to immortalise a former colleagues quotes presented me with a chance to experiment with my Javascript and JQuery knowledge. </p>
 						</div>
 					</div>
-				</div>
 				</div>
 		    </div>
 		    <div id="menu2" class="tab-pane fade">
@@ -167,8 +168,8 @@
 				<ul class="examples" style="list-style-type:none">
 				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
 				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="html.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="bootstrap.png"></a></div></li>
+				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src="tbc.png"></a></div></li>
+				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src="tbc.png"></a></div></li>
 				</ul>	
 				<div class="col-xs-4 col-md-2"></div>
 			</div>
