moving showcase text

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 						<div class="col-sm-4">
 						</div>
 						<div class="col-sm-4">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
+							<p>The first site I ever completed.</br>
+							</br>A re-design of a Nottingham based companies website to help improve the sites ease of use.</br>
+							</br>Taking the key information and basic branding from the previous site I started again from scratch</br>
+							</br> With the Primary audience being the elderly the site was designed to be as simple as possible whilst also maintaining a professional image.</p>
 						</div>
 						<div class="col-sm-4">
-							<p><em>"The first site I ever completed.</br>
-							</br>A re-design of a Friend's website to help improve his websites ease of use.</br>
-							</br>Taking the key information and branding from the previous site I started again from scratch</br>
-							</br> With the Primary audience being the elderly the site was designed to be as simple as possible whilst also maintaining a professional image"</em></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sagittis, erat id auctor molestie, sem risus ornare arcu, non tristique dolor ex eget orci. Mauris scelerisque orci a sem rhoncus, ultricies dictum tortor fringilla. Nunc suscipit accumsan massa quis aliquam. Etiam varius libero enim. Mauris nulla purus, faucibus eu mollis ut, lobortis eu odio. Phasellus id varius odio. Quisque vitae turpis turpis. </p>
 						</div>
 					</div>
 				</div>
