--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="showcase">
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<a href="Little Legs.html"><img src="perfectcareheader.png"/></a>
+				<a href="#"><img src="perfectcareheader.png"/></a>
 
 				 <div class="container">
 					<div class="row">
@@ -120,7 +120,7 @@
 				</div>
 			</div>
 		    <div id="menu1" class="tab-pane fade">
-		      <img src="swmsheader.png"/>
+		      <a href="Little Legs.html"><img src="swmsheader.png"/></a>
 
 			   <div class="container">
 					<div class="row">
@@ -164,14 +164,10 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-md-2"></div>
 				<ul class="examples" style="list-style-type:none">
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu2"><img id="sel3" src=""></a></div></li>
-				<li class="current"><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
-				<li><div class="col-xs-4 col-md-2"><a data-toggle="tab" href="#menu3"><img id="sel4" src=""></a></div></li>
+				<li class="current"><div class="col-md-offset-4 col-md-2 col-sm-offset-4 col-sm-4"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
+				<li><div class="col-md-2 col-sm-4"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
 				</ul>	
-				<div class="col-xs-4 col-md-2"></div>
 			</div>
 		</div>
 		<div class="selector-text" >
@@ -193,29 +189,45 @@
 	</div>
     <div id="d" class="panels">Scrolling-Panel 3
 	
-		<div class="container">
-  <form action="action_page.php">
-
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
+	<div class="container">
+	
+	<div class="row">
+	
+	<div class="col-md-6">
+		<h1>YELL AT ME</h1>
+	</div>
+	
+	<div class="col-md-6">
+	
+	<form>
+	<div class="form-group">
+    <label for="exampleFormControlInput1">Name</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Who dis?">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Example select</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
     </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-
-  </form>
-</div>
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="12"></textarea>
+  </div>
+</form>
+	
+	</div>
+	
+	</div>
+	
+	</div>
+	
 	</div>
 
 <footer>
