--- a/Little Legs.html
+++ b/Little Legs.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="little legs.css">
+    <link rel="stylesheet" href="Little Legs.css">
 	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		
