--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
 	
 	
 	</div>
-    <div id="d" class="panels">Scrolling-Panel 3
+    <div id="d" class="panels redback">Scrolling-Panel 3
 	
 	<div class="container">
 	
