--- a/portfolio.html
+++ b/portfolio.html
@@ -165,8 +165,8 @@
 		<div class="container">
 			<div class="row">
 				<ul class="examples" style="list-style-type:none">
-				<li class="current"><div class="col-md-offset-4 col-md-2 col-sm-offset-4 col-sm-4"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
-				<li><div class="col-md-2 col-sm-4"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
+				<li id="PC" class="current"><div class="col-md-offset-4 col-md-2 col-sm-offset-4 col-sm-4"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
+				<li id="SW" ><div class="col-md-2 col-sm-4"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
 				</ul>	
 			</div>
 		</div>
@@ -187,7 +187,7 @@
 	
 	
 	</div>
-    <div id="d" class="panels redback">Scrolling-Panel 3
+    <div id="d" class="redback panels">Scrolling-Panel 3
 	
 	<div class="container">
 	
