--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div id="#wrapper">
 
-	<div id="a" class="panels">
+	<div id="a" class="panels blueback">
 		<div class="container">
 		<div class="hero-text">
 			<h1>I'm Jack, a front end web developer based in the East Midlands...</h1>
@@ -77,12 +77,12 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-md-2"><img src="css.png"></div>
-				<div class="col-xs-4 col-md-2"><img src="wordpress.png"></div>
-				<div class="col-xs-4 col-md-2"><img src="html.png"></div>
-				<div class="col-xs-4 col-md-2"><img src="bootstrap.png"></div>
-				<div class="col-xs-4 col-md-2"><img src="jquery.png"></div>
-				<div class="col-xs-4 col-md-2"><img src="javascript.png"></div>
+				<div id="css" class="col-xs-4 col-md-2"><img src="css.png"></div>
+				<div id="wordpress" class="col-xs-4 col-md-2"><img src="wordpress.png"></div>
+				<div id="html" class="col-xs-4 col-md-2"><img src="html.png"></div>
+				<div id="bootstrap" class="col-xs-4 col-md-2"><img src="bootstrap.png"></div>
+				<div id="jquery" class="col-xs-4 col-md-2"><img src="jquery.png"></div>
+				<div id="javascript" class="col-xs-4 col-md-2"><img src="javascript.png"></div>
 			</div>
 		</div>
 		<div class="skills-text" id="right">
@@ -165,8 +165,8 @@
 		<div class="container">
 			<div class="row">
 				<ul class="examples" style="list-style-type:none">
-				<li class="current"><div class="col-md-offset-4 col-md-2 col-sm-offset-4 col-sm-4"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
-				<li><div class="col-md-2 col-sm-4"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
+				<li id="PC" class="current"><div class="col-md-offset-4 col-md-2 col-sm-offset-4 col-sm-4"><a data-toggle="tab" href="#home"><img id="sel1" src="perfectcare.png"></a></div></li>
+				<li id="SW" ><div class="col-md-2 col-sm-4"><a data-toggle="tab" href="#menu1"><img id="sel2" src="SWMS.png"></a></div></li>
 				</ul>	
 			</div>
 		</div>
@@ -187,7 +187,7 @@
 	
 	
 	</div>
-    <div id="d" class="panels">Scrolling-Panel 3
+    <div id="d" class="redback panels">Scrolling-Panel 3
 	
 	<div class="container">
 	
