--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 
 <body>
-
+		
+		<div class="layover">
+			<a id="scrollup" href="#"><img src="scrollup.png"></a>
+		</div>
+		
 		<div class="socials">
 			<ul>
 				<li id="linked"><a href="#"><img src="linked.png"></a></li>
@@ -102,7 +106,6 @@
 	<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
 				<a href="#"><img src="perfectcareheader.png"/></a>
-
 				 <div class="container">
 					<div class="row">
 						<div class="col-sm-4">
