--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	
+	<meta name="google-site-verification" content="9SXEarAD-Whj1axVSYVSePFjR-NS5tn8NLtzfEwfMSo" />
+	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
