Its been a while
Added backing text

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	</div>
 	
 	<div id="b" class="panels">
+		<h3>Skills</h3>
 		<div class="skills">
 		<div class="skills-text">
 		<div class="container">
