--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,7 @@
 			</div>
 		</div>
 		</div>
+		<h3 class="backfont">Skills</h3>
 		<div class="container">
 			<div class="row">
 				<div id="css" class="col-xs-4 col-md-2"><img src="css.png"></div>
@@ -98,6 +99,7 @@
 			</div>
 		</div>
 		</div>
+		
 		</div>
 	</div>
     
@@ -156,6 +158,7 @@
 	<div id="e" class="panels">
 		<div class="selector">
 		<div class="selector-text" id="right">
+		<h3 class="backfont">WORK</h3>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-3 col-md-9">
