--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 	</div>
 	
 	<div id="b" class="panels">
-		<h3>Skills</h3>
 		<div class="skills">
 		<div class="skills-text">
 		<div class="container">
@@ -82,6 +81,7 @@
 			</div>
 		</div>
 		</div>
+		<h3 class="backfont">Skills</h3>
 		<div class="container">
 			<div class="row">
 				<div id="css" class="col-xs-4 col-md-2"><img src="css.png"></div>
@@ -101,6 +101,7 @@
 			</div>
 		</div>
 		</div>
+		
 		</div>
 	</div>
     
@@ -159,6 +160,7 @@
 	<div id="e" class="panels">
 		<div class="selector">
 		<div class="selector-text" id="right">
+		<h3 class="backfont">WORK</h3>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-3 col-md-9">
